namespaces/live.cloud-platform.service.justice.gov.uk/operations-engineering-test-gha-runner/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "operations-engineering-test-gha-runner"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "operations-engineering-team"
    cloud-platform.justice.gov.uk/application: "Self-managed Github Actions Runner"
    cloud-platform.justice.gov.uk/owner: "Operations Engineering: operations-engineering@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/operations-engineering-test-self-managed-gha-runner.git"
    cloud-platform.justice.gov.uk/team-name: "operations-engineering"
    cloud-platform.justice.gov.uk/review-after: "2024-08-07"
